Added required "opens" to javafx.scene.paint